--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         // ============================================
         const imageUrls = {
             'title': '',
+            'mission-plan': '',
             'come-unto-christ': '',
             'temple-covenants': '',
             'strengthen': '',
@@ -64,6 +65,62 @@
                         <div class="flex flex-col items-center gap-3">
                             <div class="w-20 h-20 bg-green-500/80 rounded-full flex items-center justify-center shadow-2xl">🎯</div>
                             <span class="font-bold text-xl">Invite</span>
+                        </div>
+                    </div>
+                </div>
+            </div>`,
+
+            () => `<div class="h-screen bg-gradient-to-br from-blue-50 via-indigo-50 to-purple-50 p-8 overflow-y-auto relative">
+                ${imageUrls['mission-plan'] ? `<div class="absolute inset-0 opacity-20" style="background: url('${imageUrls['mission-plan']}') center/cover"></div>` : ''}
+                <div class="max-w-6xl mx-auto relative z-10">
+                    <div class="text-center mb-8">
+                        <h1 class="text-5xl font-black text-indigo-900 mb-2">WARD MISSION PLAN 2026</h1>
+                        <p class="text-xl text-gray-700">Ward: Riverton 24</p>
+                        <p class="text-lg text-gray-600">Stake: Salt Lake Utah South Stake (SLUSS)</p>
+                    </div>
+
+                    <div class="bg-gradient-to-r from-indigo-600 to-purple-600 p-6 rounded-2xl shadow-2xl text-white mb-6 text-center">
+                        <p class="text-3xl font-black">BAPTISMAL GOAL: 5</p>
+                    </div>
+
+                    <div class="bg-white p-6 rounded-2xl shadow-xl mb-6 border-l-8 border-indigo-500">
+                        <h2 class="text-2xl font-bold text-indigo-900 mb-3">PLAN</h2>
+                        <p class="text-lg text-gray-800">We have our focus 5 plan. We have 5 organizations, RS, EQ, Primary, YM & YW that will be responsible for providing one investigator and one less active.</p>
+                    </div>
+
+                    <div class="bg-white p-6 rounded-2xl shadow-xl border-t-4 border-purple-500">
+                        <h2 class="text-2xl font-bold text-purple-900 mb-4">ACTION PLAN</h2>
+                        <div class="space-y-4">
+                            <div class="border-l-4 border-blue-500 pl-4 py-2 bg-blue-50 rounded">
+                                <h3 class="font-bold text-lg text-gray-900">1. Missionary Coordination:</h3>
+                                <p class="text-gray-700">Hold a Missionary Huddle every week and discuss the plan of action with each organization, as well as the progression of each name.</p>
+                            </div>
+
+                            <div class="border-l-4 border-green-500 pl-4 py-2 bg-green-50 rounded">
+                                <h3 class="font-bold text-lg text-gray-900">2. Ward Council Involvement:</h3>
+                                <p class="text-gray-700">The Ward Mission Leader will attend the Ward Council to coordinate missionary efforts and report on progress.</p>
+                            </div>
+
+                            <div class="border-l-4 border-yellow-500 pl-4 py-2 bg-yellow-50 rounded">
+                                <h3 class="font-bold text-lg text-gray-900">3. Focus Families:</h3>
+                                <p class="text-gray-700">We have a link/website that one person from each organization can update throughout the week, and then during our missionary huddle discussions can be had if there're concerns that need to be resolved.</p>
+                            </div>
+
+                            <div class="border-l-4 border-orange-500 pl-4 py-2 bg-orange-50 rounded">
+                                <h3 class="font-bold text-lg text-gray-900">4. Missionary Focus Week:</h3>
+                                <p class="text-gray-700">Follow the stake guidelines for the focus week and plan ahead of time with assignments according to our Focus 5 plan. Then, follow up with ward council members if additional needs arise.</p>
+                            </div>
+
+                            <div class="border-l-4 border-red-500 pl-4 py-2 bg-red-50 rounded">
+                                <h3 class="font-bold text-lg text-gray-900">5. Member Visits:</h3>
+                                <p class="text-gray-700">Each of the 5 organizations will plan to visit ward members, experience the P.R.A.Y. principle, and experience the Book of Mormon invitation.</p>
+                            </div>
+
+                            <div class="border-l-4 border-purple-500 pl-4 py-2 bg-purple-50 rounded">
+                                <h3 class="font-bold text-lg text-gray-900">6. Review and Evaluation:</h3>
+                                <p class="text-gray-700">The focus 5 link will help us track our success and see where our strengths and weaknesses are as a ward. Then we can make adjustments and train so that our weaknesses become our strengths.</p>
+                                <p class="text-sm italic text-gray-600 mt-2">Ether 12:27</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -314,7 +371,7 @@
         ];
 
         const nav = (d) => { 
-            state.slide = Math.max(0, Math.min(9, state.slide + d)); 
+            state.slide = Math.max(0, Math.min(10, state.slide + d)); 
             state.clicked = []; 
             state.quoteShown = false; 
             render(); 
@@ -324,8 +381,8 @@
             document.getElementById('root').innerHTML = `${slides[state.slide]()}
                 <div class="fixed bottom-0 w-full bg-gray-800 p-4 flex justify-between items-center z-50">
                     <button onclick="nav(-1)" ${state.slide === 0 ? 'disabled' : ''} class="px-6 py-3 rounded-xl bg-gray-700 hover:bg-gray-600 text-white disabled:opacity-30 font-semibold">← Previous</button>
-                    <div class="flex gap-2">${[...Array(10)].map((_, i) => `<button onclick="state.slide=${i};render()" class="w-3 h-3 rounded-full ${i === state.slide ? 'bg-blue-500 w-8' : 'bg-gray-600'}"></button>`).join('')}</div>
-                    <button onclick="nav(1)" ${state.slide === 9 ? 'disabled' : ''} class="px-6 py-3 rounded-xl bg-blue-600 hover:bg-blue-700 text-white disabled:opacity-30 font-semibold">Next →</button>
+                    <div class="flex gap-2">${[...Array(11)].map((_, i) => `<button onclick="state.slide=${i};render()" class="w-3 h-3 rounded-full ${i === state.slide ? 'bg-blue-500 w-8' : 'bg-gray-600'}"></button>`).join('')}</div>
+                    <button onclick="nav(1)" ${state.slide === 10 ? 'disabled' : ''} class="px-6 py-3 rounded-xl bg-blue-600 hover:bg-blue-700 text-white disabled:opacity-30 font-semibold">Next →</button>
                 </div>`;
         };
 
