--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         // Paste your image URLs between the quotes below
         // ============================================
         const imageUrls = {
-            'title': 'https://www.churchofjesuschrist.org/imgs/74e791bd621264588bd00e0cc2fa0573435582fd/full/3840%2C/0/default
-',
+            'title': '',
             'mission-plan': '',
             'come-unto-christ': '',
             'temple-covenants': '',
